--- a/CRUDAjax/Views/Home/Index.cshtml
+++ b/CRUDAjax/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
     <script src="~/Scripts/employee.js"></script>
+    <script src="~/Scripts/alasql/alasql.js"></script>
 </head>
 <body>
     <div class="container">
